--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
                 "ratio": "cpp",
                 "regex": "cpp",
                 "iomanip": "cpp",
-                "shared_mutex": "cpp"
+                "shared_mutex": "cpp",
+                "mutex": "cpp",
+                "thread": "cpp"
         }
 }
