--- a/docker-deploy/docker-compose.yml
+++ b/docker-deploy/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./src
     command: bash -c "./run.sh"
     volumes:
-      - /var/log/erss:/var/log/erss:rw
+      - "./src:/src"
+      - "./logs:/var/log/erss"
     ports:
       - "12345:12345"
-    tty: true
